Bots All done EndgameMap and Widget

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -5,7 +5,7 @@ ProjectName=Third Person Game Template
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Shipping
-StagingDirectory=(Path="")
+StagingDirectory=(Path="C:/Users/Alex/Desktop/development")
 FullRebuild=False
 ForDistribution=True
 IncludeDebugFiles=False
@@ -62,6 +62,8 @@ bSkipMovies=False
 +MapsToCook=(FilePath="/Game/Maps/MainMenu")
 +MapsToCook=(FilePath="/Game/Maps/StartMap")
 +MapsToCook=(FilePath="/Game/Maps/GameMap")
++MapsToCook=(FilePath="/Game/Maps/EndGame")
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
+
 
