--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -33,7 +33,7 @@ InternationalizationPreset=English
 +CulturesToStage=en
 bCookAll=False
 bCookMapsOnly=False
-bCompressed=False
+bCompressed=True
 bEncryptIniFiles=False
 bEncryptPakIndex=False
 GenerateEarlyDownloaderPakFile=False
@@ -65,5 +65,4 @@ bSkipMovies=False
 +MapsToCook=(FilePath="/Game/Maps/EndGame")
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
-
 
