now working almost everything

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,9 +10,9 @@ MinimumiOSVersion=IOS_11
 [/Script/Engine.RendererSettings]
 r.MobileHDR=False
 r.Mobile.DisableVertexFog=True
-r.Shadow.CSM.MaxMobileCascades=2
+r.Shadow.CSM.MaxMobileCascades=1
 r.MobileMSAA=1
-r.Mobile.UseLegacyShadingModel=False
+r.Mobile.UseLegacyShadingModel=True
 r.Mobile.UseHWsRGBEncoding=False
 r.Mobile.AllowDitheredLODTransition=False
 r.Mobile.AllowSoftwareOcclusion=False
@@ -24,7 +24,7 @@ r.MinScreenRadiusForCSMDepth=0.010000
 r.PrecomputedVisibilityWarning=False
 r.TextureStreaming=True
 Compat.UseDXT5NormalMaps=False
-r.VirtualTextures=False
+r.VirtualTextures=True
 r.VirtualTexturedLightmaps=False
 r.VT.TileSize=128
 r.VT.TileBorderSize=4
@@ -32,12 +32,12 @@ r.vt.FeedbackFactor=16
 r.VT.EnableCompressZlib=True
 r.VT.EnableCompressCrunch=False
 r.ClearCoatNormal=False
-r.ReflectionCaptureResolution=128
+r.ReflectionCaptureResolution=64
 r.ReflectionEnvironmentLightmapMixBasedOnRoughness=True
 r.ForwardShading=False
 r.VertexFoggingForOpaque=True
 r.AllowStaticLighting=True
-r.NormalMapsForStaticLighting=False
+r.NormalMapsForStaticLighting=True
 r.GenerateMeshDistanceFields=False
 r.DistanceFieldBuild.EightBit=False
 r.GenerateLandscapeGIData=False
@@ -62,7 +62,7 @@ r.DefaultFeature.LensFlare=False
 r.TemporalAA.Upsampling=False
 r.DefaultFeature.AntiAliasing=0
 r.DefaultFeature.LightUnits=1
-r.DefaultBackBufferPixelFormat=4
+r.DefaultBackBufferPixelFormat=0
 r.Shadow.UnbuiltPreviewInGame=True
 r.StencilForLODDither=False
 r.EarlyZPass=3
@@ -75,7 +75,7 @@ bDefaultParticleCutouts=False
 fx.GPUSimulationTextureSizeX=1024
 fx.GPUSimulationTextureSizeY=1024
 r.AllowGlobalClipPlane=False
-r.GBufferFormat=1
+r.GBufferFormat=0
 r.MorphTarget.Mode=True
 r.GPUCrashDebugging=False
 vr.InstancedStereo=False
@@ -184,3 +184,5 @@ InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOuterBounds=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPOuterBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 ChaosSettings=(DefaultThreadingModel=DedicatedThread,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
+
+
