--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -87,9 +87,8 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="Turn",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="LookUpRate",Scale=1.000000,Key=Gamepad_RightY)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
-DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
+DefaultTouchInterface=/Engine/MobileResources/HUD/LeftVirtualJoystickOnly.LeftVirtualJoystickOnly
 ConsoleKey=None
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
-
 
