--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -138,6 +138,13 @@ ApplicationDisplayName=SkyStone
 KeyStorePassword=simulator12
 bBuildForES2=False
 bBuildForES31=True
+StoreVersionOffsetArmV7=20
+StoreVersionOffsetArm64=9
+StoreVersionOffsetX8664=3
+MinSDKVersion=14
+TargetSDKVersion=28
+bBuildForArm64=False
+StoreVersion=20
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
