--- a/Skystone_working.uproject
+++ b/Skystone_working.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.23",
+	"EngineAssociation": "{D2E09908-46E0-7C5C-0BA2-E4BE00B49817}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
