minor bugs fixed

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -143,8 +143,9 @@ StoreVersionOffsetArm64=9
 StoreVersionOffsetX8664=3
 MinSDKVersion=14
 TargetSDKVersion=28
-bBuildForArm64=False
-StoreVersion=20
+bBuildForArm64=True
+StoreVersion=21
+bBuildForArmV7=False
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -191,5 +192,3 @@ InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOuterBounds=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPOuterBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 ChaosSettings=(DefaultThreadingModel=DedicatedThread,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
-
-
