--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,7 @@
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_11
+MobileProvision=Distro_MotionArts (2).mobileprovision
+SigningCertificate=iPhone Developer: Lucian Ojica (PK8HAWU44V)
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/Skystone_working")
@@ -139,7 +141,7 @@ KeyStorePassword=simulator12
 bBuildForES2=False
 bBuildForES31=True
 StoreVersionOffsetArmV7=20
-StoreVersionOffsetArm64=9
+StoreVersionOffsetArm64=21
 StoreVersionOffsetX8664=3
 MinSDKVersion=14
 TargetSDKVersion=28
@@ -192,3 +194,5 @@ InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOuterBounds=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPOuterBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 ChaosSettings=(DefaultThreadingModel=DedicatedThread,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
+
+
