--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -145,9 +145,9 @@ StoreVersionOffsetArm64=21
 StoreVersionOffsetX8664=3
 MinSDKVersion=14
 TargetSDKVersion=28
-bBuildForArm64=True
-StoreVersion=21
-bBuildForArmV7=False
+bBuildForArm64=False
+StoreVersion=22
+bBuildForArmV7=True
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -194,5 +194,3 @@ InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOuterBounds=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPOuterBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 ChaosSettings=(DefaultThreadingModel=DedicatedThread,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
-
-
