--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /Intermediate
 /Saved
 /Content/ThirdPersonBP/Blueprints/mesh/mesh_current/Complex.uasset
+/Content/ThirdPersonCPP/Blueprints/first_robot_lq.uasset
