--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -116,7 +116,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/Blueprints/MyGameInstance.MyGameInstance_C
-GameDefaultMap=/Game/Maps/MainMenu.MainMenu
+GameDefaultMap=/Game/Maps/StartMap.StartMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Script/Skystone_working.Skystone_workingGameMode
 GlobalDefaultServerGameMode=None
@@ -146,7 +146,7 @@ StoreVersionOffsetX8664=3
 MinSDKVersion=14
 TargetSDKVersion=28
 bBuildForArm64=False
-StoreVersion=22
+StoreVersion=23
 bBuildForArmV7=True
 
 [/Script/Engine.PhysicsSettings]
