--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -30,6 +30,7 @@ bSharedMaterialNativeLibraries=False
 ApplocalPrerequisitesDirectory=(Path="")
 IncludeCrashReporter=False
 InternationalizationPreset=English
+-CulturesToStage=en
 +CulturesToStage=en
 bCookAll=False
 bCookMapsOnly=False
@@ -39,6 +40,26 @@ bEncryptPakIndex=False
 GenerateEarlyDownloaderPakFile=False
 bSkipEditorContent=False
 bSkipMovies=False
+-EarlyDownloaderPakFileFiles=...\Content\Internationalization\...\*.icu
+-EarlyDownloaderPakFileFiles=...\Content\Internationalization\...\*.brk
+-EarlyDownloaderPakFileFiles=...\Content\Internationalization\...\*.res
+-EarlyDownloaderPakFileFiles=...\Content\Internationalization\...\*.nrm
+-EarlyDownloaderPakFileFiles=...\Content\Internationalization\...\*.cfu
+-EarlyDownloaderPakFileFiles=...\Content\Localization\...\*.*
+-EarlyDownloaderPakFileFiles=...\Content\Localization\*.*
+-EarlyDownloaderPakFileFiles=...\Content\Certificates\...\*.*
+-EarlyDownloaderPakFileFiles=...\Content\Certificates\*.*
+-EarlyDownloaderPakFileFiles=-...\Content\Localization\Game\...\*.*
+-EarlyDownloaderPakFileFiles=-...\Content\Localization\Game\*.*
+-EarlyDownloaderPakFileFiles=...\Config\...\*.ini
+-EarlyDownloaderPakFileFiles=...\Config\*.ini
+-EarlyDownloaderPakFileFiles=...\Engine\GlobalShaderCache*.bin
+-EarlyDownloaderPakFileFiles=...\Content\ShaderArchive-Global*.ushaderbytecode
+-EarlyDownloaderPakFileFiles=...\Content\Slate\*.*
+-EarlyDownloaderPakFileFiles=...\Content\Slate\...\*.*
+-EarlyDownloaderPakFileFiles=...\*.upluginmanifest
+-EarlyDownloaderPakFileFiles=...\*.uproject
+-EarlyDownloaderPakFileFiles=...\global_sf*.metalmap
 +EarlyDownloaderPakFileFiles=...\Content\Internationalization\...\*.icu
 +EarlyDownloaderPakFileFiles=...\Content\Internationalization\...\*.brk
 +EarlyDownloaderPakFileFiles=...\Content\Internationalization\...\*.res
@@ -59,10 +80,10 @@ bSkipMovies=False
 +EarlyDownloaderPakFileFiles=...\*.upluginmanifest
 +EarlyDownloaderPakFileFiles=...\*.uproject
 +EarlyDownloaderPakFileFiles=...\global_sf*.metalmap
-+MapsToCook=(FilePath="/Game/Maps/MainMenu")
 +MapsToCook=(FilePath="/Game/Maps/StartMap")
 +MapsToCook=(FilePath="/Game/Maps/GameMap")
 +MapsToCook=(FilePath="/Game/Maps/EndGame")
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
+
 
