--- a/Config/Android/AndroidEngine.ini
+++ b/Config/Android/AndroidEngine.ini
@@ -1,7 +1,7 @@
 
 [ForwardShadingQuality_GLSL_ES3_1_ANDROID ShaderPlatformQualitySettings]
-QualityOverrides[0]=(bDiscardQualityDuringCook=False,bEnableOverride=True,bForceFullyRough=False,bForceNonMetal=False,bForceDisableLMDirectionality=False,bForceLQReflections=True,bDisableMaterialNormalCalculation=True,MobileCSMQuality=NoFiltering)
+QualityOverrides[0]=(bDiscardQualityDuringCook=False,bEnableOverride=False,bForceFullyRough=False,bForceNonMetal=False,bForceDisableLMDirectionality=False,bForceLQReflections=False,bDisableMaterialNormalCalculation=False,MobileCSMQuality=NoFiltering)
 QualityOverrides[1]=(bDiscardQualityDuringCook=False,bEnableOverride=True,bForceFullyRough=False,bForceNonMetal=False,bForceDisableLMDirectionality=False,bForceLQReflections=False,bDisableMaterialNormalCalculation=False,MobileCSMQuality=PCF_2x2)
-QualityOverrides[2]=(bDiscardQualityDuringCook=False,bEnableOverride=True,bForceFullyRough=False,bForceNonMetal=False,bForceDisableLMDirectionality=False,bForceLQReflections=True,bDisableMaterialNormalCalculation=True,MobileCSMQuality=PCF_2x2)
+QualityOverrides[2]=(bDiscardQualityDuringCook=False,bEnableOverride=False,bForceFullyRough=False,bForceNonMetal=False,bForceDisableLMDirectionality=False,bForceLQReflections=False,bDisableMaterialNormalCalculation=False,MobileCSMQuality=PCF_2x2)
 
 
