--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /Saved
 /Content/ThirdPersonBP/Blueprints/mesh/mesh_current/Complex.uasset
 /Content/ThirdPersonCPP/Blueprints/first_robot_lq.uasset
+/Content/ThirdPersonCPP/Blueprints/second_robot.uasset
