--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -145,9 +145,10 @@ StoreVersionOffsetArm64=21
 StoreVersionOffsetX8664=3
 MinSDKVersion=14
 TargetSDKVersion=28
-bBuildForArm64=False
+bBuildForArm64=True
 StoreVersion=23
-bBuildForArmV7=True
+bBuildForArmV7=False
+bSupportsVulkan=True
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
