shop widget not complete

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -149,6 +149,7 @@ bBuildForArm64=True
 StoreVersion=23
 bBuildForArmV7=False
 bSupportsVulkan=True
+bPackageDataInsideApk=True
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -198,4 +199,3 @@ ChaosSettings=(DefaultThreadingModel=DedicatedThread,DedicatedThreadTickMode=Var
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 Compiler=VisualStudio2019
-
