--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -145,11 +145,11 @@ StoreVersionOffsetArm64=21
 StoreVersionOffsetX8664=3
 MinSDKVersion=14
 TargetSDKVersion=28
-bBuildForArm64=True
+bBuildForArm64=False
 StoreVersion=23
-bBuildForArmV7=False
+bBuildForArmV7=True
 bSupportsVulkan=True
-bPackageDataInsideApk=True
+bPackageDataInsideApk=False
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
