--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -190,7 +190,7 @@ Compiler=VisualStudio2019
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 PackageName=com.MotionArts.SkyStone
-StoreVersion=27
+StoreVersion=26
 StoreVersionOffsetArmV7=21
 StoreVersionOffsetArm64=22
 StoreVersionOffsetX8664=3
@@ -216,13 +216,12 @@ bFullScreen=True
 bEnableNewKeyboard=True
 DepthBufferPreference=Default
 bValidateTextureFormats=True
-+ExtraManifestNodeTags=com.google.android.gms.games.APP_ID="string/app_id"
-+ExtraManifestNodeTags=com.google.android.gms.appstate.APP_ID="string/app_id"
++ExtraManifestNodeTags=com.google.android.gms.games.APP_ID="993177219637"
++ExtraManifestNodeTags=com.google.android.gms.appstate.APP_ID="993177219637"
 ExtraApplicationSettings=
 ExtraActivitySettings=
 +ExtraPermissions=com.android.vending.BILLING
 +ExtraPermissions=android.permission.INTERNET
-+ExtraPermissions=android.permission.GET_ACCOUNTS
 +ExtraPermissions=android.permission.USE_CREDENTIALS
 bAndroidVoiceEnabled=False
 bRemoveOSIG=False
@@ -242,7 +241,7 @@ bDetectVulkanByDefault=True
 bBuildWithHiddenSymbolVisibility=False
 bSaveSymbols=False
 bEnableGooglePlaySupport=True
-bUseGetAccounts=False
+bUseGetAccounts=True
 GamesAppID=993177219637
 bEnableSnapshots=False
 bSupportAdMob=False
@@ -293,5 +292,4 @@ TextureFormatPriority_ATC=0.500000
 TextureFormatPriority_ASTC=0.900000
 SDKAPILevelOverride=
 NDKAPILevelOverride=
-
 
