--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -188,9 +188,15 @@ ChaosSettings=(DefaultThreadingModel=DedicatedThread,DedicatedThreadTickMode=Var
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 Compiler=VisualStudio2019
 
+[OnlineSubsystem]
+DefaultPlatformService=GooglePlay
+
+[OnlineSubsystemGooglePlay.Store]
+bSupportsInAppPurchasing=True
+
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 PackageName=com.MotionArts.SkyStone
-StoreVersion=26
+StoreVersion=33
 StoreVersionOffsetArmV7=21
 StoreVersionOffsetArm64=22
 StoreVersionOffsetX8664=3
@@ -220,9 +226,6 @@ bValidateTextureFormats=True
 +ExtraManifestNodeTags=com.google.android.gms.appstate.APP_ID="993177219637"
 ExtraApplicationSettings=
 ExtraActivitySettings=
-+ExtraPermissions=com.android.vending.BILLING
-+ExtraPermissions=android.permission.INTERNET
-+ExtraPermissions=android.permission.USE_CREDENTIALS
 bAndroidVoiceEnabled=False
 bRemoveOSIG=False
 +GoogleVRCaps=Daydream33
