--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -196,8 +196,8 @@ bSupportsInAppPurchasing=True
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 PackageName=com.MotionArts.SkyStone
-StoreVersion=39
-StoreVersionOffsetArmV7=21
+StoreVersion=38
+StoreVersionOffsetArmV7=22
 StoreVersionOffsetArm64=22
 StoreVersionOffsetX8664=3
 ApplicationDisplayName=SkyStone
@@ -234,8 +234,8 @@ KeyStore=Skystone-key.keystore
 KeyAlias=Skystone
 KeyStorePassword=simulator12
 KeyPassword=
-bBuildForArmV7=False
-bBuildForArm64=True
+bBuildForArmV7=True
+bBuildForArm64=False
 bBuildForX8664=False
 bBuildForES2=False
 bBuildForES31=True
