--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -196,7 +196,7 @@ bSupportsInAppPurchasing=True
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 PackageName=com.MotionArts.SkyStone
-StoreVersion=38
+StoreVersion=41
 StoreVersionOffsetArmV7=22
 StoreVersionOffsetArm64=22
 StoreVersionOffsetX8664=3
@@ -234,8 +234,8 @@ KeyStore=Skystone-key.keystore
 KeyAlias=Skystone
 KeyStorePassword=simulator12
 KeyPassword=
-bBuildForArmV7=False
-bBuildForArm64=True
+bBuildForArmV7=True
+bBuildForArm64=False
 bBuildForX8664=False
 bBuildForES2=False
 bBuildForES31=True
@@ -295,3 +295,4 @@ TextureFormatPriority_ATC=0.500000
 TextureFormatPriority_ASTC=0.900000
 SDKAPILevelOverride=
 NDKAPILevelOverride=
+
