--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 /Content/ThirdPersonCPP/Blueprints/second_robot__1_.uasset
 /Content/ThirdPersonCPP/Blueprints/NewFolder1/completed_second_robot__1_.uasset
 /Content/ThirdPersonCPP/Blueprints/NewFolder2/second_robot.uasset
+Skystone_working.zip
