--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_11
 MobileProvision=Distro_MotionArts (1).mobileprovision
-SigningCertificate=iPhone Distribution: Centrul Teritorial de Calcul Electronic S.A. (BDHJP35ARS)
+SigningCertificate=iPhone Developer: Lucian Ojica (PK8HAWU44V)
 BundleDisplayName=FTC Skystone Game
 BundleName=FTC Skystone Game
 BundleIdentifier=com.MotionArts.Skystone
@@ -11,12 +11,17 @@ FrameRateLock=PUFRL_60
 bEnableCloudKitSupport=True
 IOSCloudKitSyncStrategy=Always
 bEnableGameCenterSupport=True
+bSupportsITunesFileSharing=False
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/Skystone_working")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/Skystone_working")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="Skystone_workingGameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="Skystone_workingCharacter")
+
+
+[URL]
+GameName=SkystoneWorking
 
 [/Script/Engine.RendererSettings]
 r.MobileHDR=False
@@ -196,9 +201,9 @@ bSupportsInAppPurchasing=True
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 PackageName=com.MotionArts.SkyStone
-StoreVersion=41
-StoreVersionOffsetArmV7=22
-StoreVersionOffsetArm64=22
+StoreVersion=44
+StoreVersionOffsetArmV7=23
+StoreVersionOffsetArm64=23
 StoreVersionOffsetX8664=3
 ApplicationDisplayName=SkyStone
 VersionDisplayName=1.0
@@ -222,7 +227,7 @@ bFullScreen=True
 bEnableNewKeyboard=True
 DepthBufferPreference=Default
 bValidateTextureFormats=True
-+ExtraManifestNodeTags=com.google.android.gms.games.APP_ID="993177219637"
++ExtraManifestNodeTags=
 +ExtraManifestNodeTags=com.google.android.gms.appstate.APP_ID="993177219637"
 ExtraApplicationSettings=
 ExtraActivitySettings=
