--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,17 +1,18 @@
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
-MinimumiOSVersion=IOS_11
+MinimumiOSVersion=IOS_12
 MobileProvision=Distro_MotionArts (1).mobileprovision
 SigningCertificate=iPhone Developer: Lucian Ojica (PK8HAWU44V)
 BundleDisplayName=FTC Skystone Game
 BundleName=FTC Skystone Game
 BundleIdentifier=com.MotionArts.Skystone
-bSupportsMetalMRT=True
+bSupportsMetalMRT=False
 bCookASTCTextures=True
 FrameRateLock=PUFRL_60
 bEnableCloudKitSupport=True
 IOSCloudKitSyncStrategy=Always
 bEnableGameCenterSupport=True
 bSupportsITunesFileSharing=False
+MaxShaderLanguageVersion=4
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/Skystone_working")
@@ -201,7 +202,7 @@ bSupportsInAppPurchasing=True
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 PackageName=com.MotionArts.SkyStone
-StoreVersion=44
+StoreVersion=47
 StoreVersionOffsetArmV7=23
 StoreVersionOffsetArm64=23
 StoreVersionOffsetX8664=3
@@ -239,8 +240,8 @@ KeyStore=Skystone-key.keystore
 KeyAlias=Skystone
 KeyStorePassword=simulator12
 KeyPassword=
-bBuildForArmV7=True
-bBuildForArm64=False
+bBuildForArmV7=False
+bBuildForArm64=True
 bBuildForX8664=False
 bBuildForES2=False
 bBuildForES31=True
