--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -203,7 +203,7 @@ bSupportsInAppPurchasing=True
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 PackageName=com.MotionArts.SkyStone
-StoreVersion=52
+StoreVersion=55
 StoreVersionOffsetArmV7=23
 StoreVersionOffsetArm64=23
 StoreVersionOffsetX8664=3
@@ -241,8 +241,8 @@ KeyStore=Skystone-key.keystore
 KeyAlias=Skystone
 KeyStorePassword=simulator12
 KeyPassword=
-bBuildForArmV7=False
-bBuildForArm64=True
+bBuildForArmV7=True
+bBuildForArm64=False
 bBuildForX8664=False
 bBuildForES2=False
 bBuildForES31=True
@@ -253,6 +253,7 @@ bSaveSymbols=False
 bEnableGooglePlaySupport=True
 bUseGetAccounts=True
 GamesAppID=993177219637
++LeaderboardMap=(Name="highscore",LeaderboardID="CgkIteTm7_McEAIQAg")
 bEnableSnapshots=True
 bSupportAdMob=False
 AdMobAdUnitID=
